--- a/src/app/landing-page-gt/landing-page-gt.component.html
+++ b/src/app/landing-page-gt/landing-page-gt.component.html
@@ -15,7 +15,7 @@
           </h2>
           <p>
             O Talento Global é uma experiência internacional em empresas durante 3 a 12 meses em que o jovem tem a chance de viver o
-            ambiente profissional e corporativo. As grandes áreas de estágio do Talento Global são: Ensino de Idiomas, Tecnologia
+            ambiente profissional e corporativo. As grandes áreas de atuação do Talento Global são: Ensino de Idiomas, Tecnologia
             da Informação e áreas de Administração, como finanças, gestão, RH e marketing. Para o processo, é necessário
             alguns requisitos como: inglês avançado e experiência na área que quer atuar. Nessa experiência, o intercambista
             recebe uma bolsa-auxílio para cobrir os custos básicos durante o período de intercâmbio.
