--- a/src/app/landing-page-gv/landing-page-gv.component.html
+++ b/src/app/landing-page-gv/landing-page-gv.component.html
@@ -14,9 +14,10 @@
             Visão geral do programa
           </h2>
           <p>
-            O Voluntário Global é uma experiência voluntária em ONGs de diversos países. Todos os projetos são vinculados aos Objetivos
-            Desenvolvimento Sustentável das Nações Unidas e têm impacto real nas comunidades onde são realizados. Os projetos
-            duram a partir de 6 semanas e o único requisito é a vontade de deixar sua marca no mundo!
+            O Voluntário Global é uma experiência voluntária em ONGs, Escolas ou Fundações em diversos países. Todos os projetos são
+            vinculados aos Objetivos de Desenvolvimento Sustentável das Nações Unidas e possuem grande potencial de impacto
+            no mundo. Os projetos tem duração de 6 a 8 semanas e ter entre 18 e 30 anos é o único requisito para deixar sua
+            marca no mundo.
         </div>
       </div>
     </div>
@@ -37,10 +38,10 @@
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
               <h3 class="bold line-height-lower darker">
-                Cadastro
+                Cadastre-se
               </h3>
               <p class="lighter">
-                Preencha seu cadastro e veja oportunidades no nosso site
+                Preencha seu cadastro e veja as oportunidades em nosso site.
               </p>
             </div>
           </div>
@@ -50,10 +51,10 @@
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
               <h3 class="bold line-height-lower darker">
-                Abordado pela AIESEC
+                Contato com a AIESEC
               </h3>
               <p class="lighter">
-                A AIESEC mais próxima de você vai entrar em contato para tirar suas dúvidas e indicar vagas
+                A AIESEC mais próxima de você entrará em contato para tirar suas dúvidas e indicar vagas.
               </p>
             </div>
           </div>
@@ -63,10 +64,10 @@
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
               <h3 class="bold line-height-lower darker">
-                Aplicar em vagas
+                Aplique em nossas vagas
               </h3>
               <p class="lighter">
-                Você se candidata às vagas que te interessam
+                Você se candidata às vagas que te interessam.
               </p>
             </div>
           </div>
@@ -79,7 +80,8 @@
                 Ser aprovado na vaga
               </h3>
               <p class="lighter">
-                Depois do contato com a AIESEC que vai te receber, você é convidado a fechar a vaga para aquele projeto, mediante o pagamento de uma taxa administrativa
+                Depois do contato com a AIESEC que vai te receber, você é convidado a fechar a vaga para aquele projeto, mediante o pagamento
+                de uma taxa administrativa.
               </p>
             </div>
           </div>
@@ -89,10 +91,10 @@
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
               <h3 class="bold line-height-lower darker">
-                Se preparar para o intercâmbio
+                Se prepare para o seu intercâmbio
               </h3>
               <p class="lighter">
-                Com suporte da AIESEC você se prepara para viajar e fazer um projeto incrível
+                Com o suporte da AIESEC você se preparará para viajar e fazer um projeto incrível.
               </p>
             </div>
           </div>
@@ -102,7 +104,7 @@
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
               <h3 class="bold line-height-lower darker">
-                Viver a experiência!
+                Viva a Experiência
               </h3>
               <p class="lighter">
                 Agora é só viajar e, com auxílio da AIESEC, viver uma experiência de liderança!
@@ -133,8 +135,7 @@
                 Alguém vai me acompanhar durante o intercâmbio?
               </h3>
               <p class='lighter italic'>
-                O seu projeto acontecerá com outros intercambistas da AIESEC! Além disso, haverá uma pessoa da cidade para dar suporte ao
-                seu projeto.
+                Sempre haverá uma pessoa da AIESEC em contato com você, tanto do país aonde você está quanto do Brasil.
               </p>
             </div>
             <div class="col-sm-12">
@@ -152,8 +153,7 @@
                 Qual o tipo de acomodação que irei ficar?
               </h3>
               <p class='lighter italic'>
-                Depende do país que você está se aplicando, você pode ficar hospedado em uma casa de família voluntária, hostel ou apartamento
-                com outros intercambistas!
+                Depende do seu país de destino. Você poderá ficar hospedado em uma casa com nativos, hostel ou apartamento com outros intercambistas!
               </p>
             </div>
             <div class="col-sm-12">
@@ -186,7 +186,7 @@
               </h3>
               <p class="lighter lower">
                 Ao se inscrever, um voluntário da AIESEC vai te auxiliar a achar a vaga certa para o seu perfil, tirar todas suas dúvidas
-                e vai te colocar em contato com o escritório para onde você vai viajar
+                e vai te colocar em contato com o escritório para onde você vai viajar.
               </p>
             </div>
           </div>
@@ -200,7 +200,7 @@
               </h3>
               <p class="lighter lower">
                 Antes e durante o intercâmbio, a AIESEC na sua cidade e no seu destino irão te auxiliar com a logística de transporte, acomodação
-                e preparo para o seu projeto
+                e preparo para o seu projeto.
               </p>
             </div>
           </div>
@@ -210,10 +210,10 @@
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
               <h3 class="bold line-height-lower darker">
-                Descrição clara de trabalho
+                Descrição de trabalho
               </h3>
               <p class="lighter lower">
-                Independente do tipo de intercâmbio, nossas oportunidades têm descrições claras do tipo de projeto que você vai participar,
+                  Independente do tipo de intercâmbio, nossas oportunidades possuem descrições do projeto que você vai participar,
                 carga horária e as suas responsabilidades. Além disso, você pode conversar com a nossa equipe para esclarecer
                 qualquer dúvida.
               </p>
