review(landing pages)

--- a/src/app/landing-page-gt/landing-page-gt.component.html
+++ b/src/app/landing-page-gt/landing-page-gt.component.html
@@ -43,7 +43,7 @@
                 Cadastre-se
               </h3>
               <p class="lighter">
-                  Preencha seu cadastro e veja as oportunidades em nosso site.
+                Preencha seu cadastro e veja as oportunidades em nosso site.
               </p>
             </div>
           </div>
@@ -53,10 +53,10 @@
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
               <h3 class="bold line-height-lower darker">
-                  Contato com a AIESEC
+                Contato com a AIESEC
               </h3>
               <p class="lighter">
-                  A AIESEC mais próxima de você entrará em contato para tirar suas dúvidas e indicar vagas.
+                A AIESEC mais próxima de você entrará em contato para tirar suas dúvidas e indicar vagas.
               </p>
             </div>
           </div>
@@ -80,7 +80,7 @@
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
               <h3 class="bold line-height-lower darker">
-                  Aplique em nossas vagas
+                Aplique em nossas vagas
               </h3>
               <p class="lighter">
                 No site você pode se candidatar as diversas vagas que encaixam no seu perfil, a partir da consultoria feita com seu escritório
@@ -97,8 +97,8 @@
                 Entrevistas para vagas que for selecionado
               </h3>
               <p class="lighter">
-                  Você vai passar por uma entrevista com a oportunidade que você se candidatou, para se apresentar, responder algumas perguntas
-                  e tirar dúvidas.
+                Você vai passar por uma entrevista com a oportunidade que você se candidatou, para se apresentar, responder algumas perguntas
+                e tirar dúvidas.
               </p>
             </div>
           </div>
@@ -125,7 +125,7 @@
                 Se prepare para o seu Intercâmbio
               </h3>
               <p class="lighter">
-                  Com o suporte da AIESEC você se preparará para viajar e fazer um projeto incrível.
+                Com o suporte da AIESEC você se preparará para viajar e fazer um projeto incrível.
               </p>
             </div>
           </div>
@@ -255,9 +255,9 @@
                 Descrição de trabalho
               </h3>
               <p class="lighter lower">
-                  Independente do tipo de intercâmbio, nossas oportunidades possuem descrições do projeto que você vai participar,
-                  carga horária e as suas responsabilidades. Além disso, você pode conversar com a nossa equipe para esclarecer
-                  qualquer dúvida.
+                Independente do tipo de intercâmbio, nossas oportunidades possuem descrições do projeto que você vai participar, carga horária
+                e as suas responsabilidades. Além disso, você pode conversar com a nossa equipe para esclarecer qualquer
+                dúvida.
               </p>
             </div>
           </div>
