--- a/src/app/landing-page-gv/landing-page-gv.component.html
+++ b/src/app/landing-page-gv/landing-page-gv.component.html
@@ -91,7 +91,7 @@
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
               <h3 class="bold line-height-lower darker">
-                Se prepare para o seu intercâmbio
+                Se prepare para o seu Intercâmbio
               </h3>
               <p class="lighter">
                 Com o suporte da AIESEC você se preparará para viajar e fazer um projeto incrível.
@@ -213,9 +213,9 @@
                 Descrição de trabalho
               </h3>
               <p class="lighter lower">
-                  Independente do tipo de intercâmbio, nossas oportunidades possuem descrições do projeto que você vai participar,
-                carga horária e as suas responsabilidades. Além disso, você pode conversar com a nossa equipe para esclarecer
-                qualquer dúvida.
+                Independente do tipo de intercâmbio, nossas oportunidades possuem descrições do projeto que você vai participar, carga horária
+                e as suas responsabilidades. Além disso, você pode conversar com a nossa equipe para esclarecer qualquer
+                dúvida.
               </p>
             </div>
           </div>
