--- a/src/app/landing-page-ge/landing-page-ge.component.html
+++ b/src/app/landing-page-ge/landing-page-ge.component.html
@@ -42,7 +42,7 @@
                 Cadastro-se
               </h3>
               <p class="lighter">
-                  Preencha seu cadastro e veja as oportunidades em nosso site.
+                Preencha seu cadastro e veja as oportunidades em nosso site.
               </p>
             </div>
           </div>
@@ -52,10 +52,10 @@
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
               <h3 class="bold line-height-lower darker">
-                  Contato com a AIESEC
+                Contato com a AIESEC
               </h3>
               <p class="lighter">
-                  A AIESEC mais próxima de você entrará em contato para tirar suas dúvidas e indicar vagas.
+                A AIESEC mais próxima de você entrará em contato para tirar suas dúvidas e indicar vagas.
               </p>
             </div>
           </div>
@@ -79,7 +79,7 @@
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
               <h3 class="bold line-height-lower darker">
-                  Aplique em nossas vagas
+                Aplique em nossas vagas
               </h3>
               <p class="lighter">
                 No site você pode se candidatar as diversas vagas que encaixam no seu perfil, a partir da consultoria feita com seu escritório
@@ -110,8 +110,8 @@
                 Ser aprovado na vaga
               </h3>
               <p class="lighter">
-                  Depois das entrevistas, você será convidado a fechar o intercâmbio para a oportunidade que for aceito, mediante o pagamento
-                  de uma taxa administrativa.
+                Depois das entrevistas, você será convidado a fechar o intercâmbio para a oportunidade que for aceito, mediante o pagamento
+                de uma taxa administrativa.
               </p>
             </div>
           </div>
@@ -121,10 +121,10 @@
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
               <h3 class="bold line-height-lower darker">
-                  Se prepare para o seu Intercâmbio
+                Se prepare para o seu Intercâmbio
               </h3>
               <p class="lighter">
-                  Com o suporte da AIESEC você se preparará para viajar e fazer um projeto incrível.
+                Com o suporte da AIESEC você se preparará para viajar e fazer um projeto incrível.
               </p>
             </div>
           </div>
@@ -192,7 +192,7 @@
                 Qual o tipo de acomodação que irei ficar?
               </h3>
               <p class='lighter italic'>
-                  Depende do seu país de destino. Você poderá ficar hospedado em uma casa com nativos, hostel ou apartamento com outros intercambistas! 
+                Depende do seu país de destino. Você poderá ficar hospedado em uma casa com nativos, hostel ou apartamento com outros intercambistas!
               </p>
             </div>
             <div class="col-sm-12">
@@ -252,9 +252,9 @@
                 Descrição de trabalho
               </h3>
               <p class="lighter lower">
-                  Independente do tipo de intercâmbio, nossas oportunidades possuem descrições do projeto que você vai participar,
-                  carga horária e as suas responsabilidades. Além disso, você pode conversar com a nossa equipe para esclarecer
-                  qualquer dúvida.
+                Independente do tipo de intercâmbio, nossas oportunidades possuem descrições do projeto que você vai participar, carga horária
+                e as suas responsabilidades. Além disso, você pode conversar com a nossa equipe para esclarecer qualquer
+                dúvida.
               </p>
             </div>
           </div>
