--- a/src/app/form-gv/form-gv.component.scss
+++ b/src/app/form-gv/form-gv.component.scss
@@ -945,9 +945,10 @@ label {
         text-align: right;
         margin: 0;
         min-width: 100%;
-        padding: 10px 30px 6px 12px;
+        padding: 10px 0 6px 12px;
     }
     ::ng-deep .p-inputMask {
+        padding-right: 10px !important;
         &.gv {
             input {
                 font-size: 16px;
@@ -960,19 +961,19 @@ label {
                 }
             }
             input::-webkit-input-placeholder {
-                font-size: 10px !important;
+                font-size: 1.75vw !important;
                 color: #fff
             }
             input:-moz-placeholder {
-                font-size: 10px !important;
+                font-size: 1.75vw !important;
                 color: #fff
             }
             input::-moz-placeholder {
-                font-size: 10px !important;
+                font-size: 1.75vw !important;
                 color: #fff
             }
             input:-ms-input-placeholder {
-                font-size: 10px !important;
+                font-size: 1.75vw !important;
                 color: #fff
             }
         }
@@ -1010,27 +1011,27 @@ label {
     /* Placeholder Dropdown */
     input::-webkit-input-placeholder {
         color: #fff !important;
-        font-size: 10px;
+        font-size: 2vw !important;
         text-align: right;
         padding-right: 0;
     }
     input:-moz-placeholder {
         /* Firefox 18- */
         color: #fff !important;
-        font-size: 10px;
+        font-size: 2vw !important;
         text-align: right;
         padding-right: 0;
     }
     input::-moz-placeholder {
         /* Firefox 19+ */
         color: #fff !important;
-        font-size: 10px;
+        font-size: 2vw !important;
         text-align: right;
         padding-right: 0;
     }
     input:-ms-input-placeholder {
         color: #fff !important;
-        font-size: 10px;
+        font-size: 2vw !important;
         text-align: right;
         padding-right: 0;
     }
@@ -1074,19 +1075,19 @@ label {
                 }
             }
             input::-webkit-input-placeholder {
-                font-size: 14px !important;
+                font-size: 2.75vw !important;
                 color: #fff
             }
             input:-moz-placeholder {
-                font-size: 14px !important;
+                font-size: 2.75vw !important;
                 color: #fff
             }
             input::-moz-placeholder {
-                font-size: 14px !important;
+                font-size: 2.75vw !important;
                 color: #fff
             }
             input:-ms-input-placeholder {
-                font-size: 14px !important;
+                font-size: 2.75vw !important;
                 color: #fff
             }
         }
@@ -1209,27 +1210,27 @@ label {
     /* Placeholder Dropdown */
     input::-webkit-input-placeholder {
         color: #fff !important;
-        font-size: 14px;
+        font-size: 2.75vw !important;
         text-align: left;
         padding-right: 0;
     }
     input:-moz-placeholder {
         /* Firefox 18- */
         color: #fff !important;
-        font-size: 14px;
+        font-size: 2.75vw !important;
         text-align: left;
         padding-right: 0;
     }
     input::-moz-placeholder {
         /* Firefox 19+ */
         color: #fff !important;
-        font-size: 14px;
+        font-size: 2.75vw !important;
         text-align: left;
         padding-right: 0;
     }
     input:-ms-input-placeholder {
         color: #fff !important;
-        font-size: 14px;
+        font-size: 2.75vw !important;
         text-align: left;
         padding-right: 0;
     }
