--- a/src/app/form-ge/form-ge.component.scss
+++ b/src/app/form-ge/form-ge.component.scss
@@ -936,9 +936,10 @@ label {
         text-align: right;
         margin: 0;
         min-width: 100%;
-        padding: 10px 30px 6px 12px;
+        padding: 10px 0 6px 12px;
     }
     ::ng-deep .p-inputMask {
+        padding-right: 10px !important;
         &.gv {
             input {
                 font-size: 16px;
@@ -951,19 +952,19 @@ label {
                 }
             }
             input::-webkit-input-placeholder {
-                font-size: 10px !important;
+                font-size: 1.75vw !important;
                 color: #fff
             }
             input:-moz-placeholder {
-                font-size: 10px !important;
+                font-size: 1.75vw !important;
                 color: #fff
             }
             input::-moz-placeholder {
-                font-size: 10px !important;
+                font-size: 1.75vw !important;
                 color: #fff
             }
             input:-ms-input-placeholder {
-                font-size: 10px !important;
+                font-size: 1.75vw !important;
                 color: #fff
             }
         }
@@ -1001,27 +1002,27 @@ label {
     /* Placeholder Dropdown */
     input::-webkit-input-placeholder {
         color: #fff !important;
-        font-size: 10px;
+         font-size: 2vw !important;
         text-align: right;
         padding-right: 0;
     }
     input:-moz-placeholder {
         /* Firefox 18- */
         color: #fff !important;
-        font-size: 10px;
+         font-size: 2vw !important;
         text-align: right;
         padding-right: 0;
     }
     input::-moz-placeholder {
         /* Firefox 19+ */
         color: #fff !important;
-        font-size: 10px;
+         font-size: 2vw !important;
         text-align: right;
         padding-right: 0;
     }
     input:-ms-input-placeholder {
         color: #fff !important;
-        font-size: 10px;
+         font-size: 2vw !important;
         text-align: right;
         padding-right: 0;
     }
@@ -1065,19 +1066,19 @@ label {
                 }
             }
             input::-webkit-input-placeholder {
-                font-size: 13px !important;
+                font-size: 2.75vw !important;
                 color: #fff
             }
             input:-moz-placeholder {
-                font-size: 13px !important;
+                font-size: 2.75vw !important;
                 color: #fff
             }
             input::-moz-placeholder {
-                font-size: 13px !important;
+                font-size: 2.75vw !important;
                 color: #fff
             }
             input:-ms-input-placeholder {
-                font-size: 13px !important;
+                font-size: 2.75vw !important;
                 color: #fff
             }
         }
@@ -1199,27 +1200,27 @@ label {
     /* Placeholder Dropdown */
     input::-webkit-input-placeholder {
         color: #fff !important;
-        font-size: 13px;
+        font-size: 2.75vw !important;
         text-align: left;
         padding-right: 0;
     }
     input:-moz-placeholder {
         /* Firefox 18- */
         color: #fff !important;
-        font-size: 13px;
+        font-size: 2.75vw !important;
         text-align: left;
         padding-right: 0;
     }
     input::-moz-placeholder {
         /* Firefox 19+ */
         color: #fff !important;
-        font-size: 13px;
+        font-size: 2.75vw !important;
         text-align: left;
         padding-right: 0;
     }
     input:-ms-input-placeholder {
         color: #fff !important;
-        font-size: 13px;
+        font-size: 2.75vw !important;
         text-align: left;
         padding-right: 0;
     }
