--- a/src/app/landing-page-gt/landing-page-gt.component.html
+++ b/src/app/landing-page-gt/landing-page-gt.component.html
@@ -97,8 +97,7 @@
                 Entrevistas para vagas que for selecionado
               </h3>
               <p class="lighter">
-                Você vai passar por uma entrevista com a oportunidade que você se candidatou, para se apresentar, responder algumas perguntas
-                e tirar dúvidas.
+                  Você vai passar por entrevistas ao longo do processo para algumas vagas para as quais você se candidatou.
               </p>
             </div>
           </div>
