--- a/src/app/landing-page-menu/landing-page-menu.component.scss
+++ b/src/app/landing-page-menu/landing-page-menu.component.scss
@@ -74,6 +74,7 @@
             background-size: contain;
             background-position: center left;
             background-repeat: no-repeat;
+            cursor: pointer;
         }
         .logo-aiesec {
             height: 25px;
