--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -12,7 +12,7 @@
           <br> em diversas regiões do mundo.
         </p>
         <p class="mobile">
-          Intercâmbio voluntário em ONGS
+          Intercâmbio Voluntário em Fundações
         </p>
         <button type="button" (click)="goToGv()" class="btn btn-outline-light desktop">SAIBA MAIS</button>
         <button type="button" class="button centered border border-white without-background color-white mobile" (click)="toggleGv()">
@@ -25,7 +25,7 @@
             <div class="col-3 mobile-1"></div>
             <div class="col-9">
               <p>
-                Ter uma experiência de voluntário em ONGs de outros países por 6 semanas
+                Tenha uma experiência de voluntário em ONGs, Escolas ou Fundações de diversos países com duração de 6 a 8 semanas.
               </p>
             </div>
           </div>
@@ -33,7 +33,7 @@
             <div class="col-3 mobile-2"></div>
             <div class="col-9">
               <p>
-                Conheça projetos que são vinculados aos Objetivos de Desenvolvimento Sustentável das Nações Unidas
+                Conheça projetos que são vinculados aos Objetivos de Desenvolvimento Sustentável das Nações Unidas.
               </p>
             </div>
           </div>
@@ -41,7 +41,7 @@
             <div class="col-3 mobile-3"></div>
             <div class="col-9">
               <p>
-                O único requisito é a sua vontade de deixar uma marca no mundo
+                Ter entre 18 e 30 anos é o único requisito para deixar sua marca no mundo.
               </p>
             </div>
           </div>
@@ -131,7 +131,7 @@
             <div class="col-3 mobile-6"></div>
             <div class="col-9">
               <p>
-                Viva em um ambiente corporativo ensinando idiomas, trabalhando com TI ou em áreas de administração e marketing.
+                Viva em um ambiente corporativo ensinando idiomas, trabalhando com TI, finanças, gestão, RH ou marketing.
               </p>
             </div>
           </div>
@@ -203,9 +203,8 @@
     <div class="col-sm align-center meet-our-programs-content padding">
       <p class="align-center margin">
         O modelo de desenvolvimento de liderança da
-        <strong>AIESEC</strong> prepara jovens para defenderem aquilo que eles acreditam e tornarem-se capaz de fazer a
-        <strong>diferença</strong>
-        todos os dias.
+        <strong>AIESEC</strong> prepara jovens para defenderem aquilo que eles acreditam e os torna capazes de fazer a
+        <strong>diferença</strong> todos os dias.
       </p>
       <button type="button" class="btn btn-light" (click)="scrollToGlobal()">Conheça nossos programas</button>
     </div>
@@ -235,13 +234,13 @@
             <li class="bullet-3 margin">
               <div class='bullet-icon icon-3'></div>
               <span>
-                Desenvolver sua habilidades de comunicação em um ambiente de diversidade.
+                Desenvolver suas habilidades de comunicação em um ambiente diverso.
               </span>
             </li>
             <li class="bullet-4 margin">
               <div class='bullet-icon icon-4'></div>
               <span>
-                Tomar decisões para solucionar problemas diversos em ambientes desafiadores.
+                Tomar decisões para solucionar diversos problemas em ambientes desafiadores.
               </span>
             </li>
           </ul>
@@ -310,7 +309,7 @@
                   <div class="logo-product gt"></div>
                   <p class='product-story-info'>
                     "Fazer meu intercâmbio na Índia foi com certeza a experiência que eu mais de desafiei e desenvolvi, tanto profissionalmente
-                    quanto pessoalmente. Meu ano lá foi um divisor de águas na minha carreira e pra pessoa que sou hoje!""
+                    quanto pessoalmente. Meu ano lá foi um divisor de águas na minha carreira e pra pessoa que sou hoje!"
                   </p>
                   <span>
                     Amanda Peconick
