--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,13 @@ html, body {
     padding: 0;
 }
 
+select, option {
+    font-style: italic;
+    font-size: 11px;
+}
+
+@media (max-width: 485px) {
+    select, option {
+        font-size: 4vw !important;
+    }
+}
